--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
 # Created by https://www.toptal.com/developers/gitignore/api/java,windows,macos
 # Edit at https://www.toptal.com/developers/gitignore?templates=java,windows,macos
 
-#application.yml
+# application.yml
 **/application.yml
+**/application-local.yml
+**/application-prod.yml
+
 # 빌드, 로컬 설정 파일
 .idea/
 .gradle/
