--- a/k8s/kustomization.yaml
+++ b/k8s/kustomization.yaml
@@ -3,7 +3,7 @@ resources:
   - nginx.yaml
   - mariadb.yaml
   - backend.yaml
-  - frontend.yaml
+  - ingress.yaml
 configMapGenerator:
   - name: nginx
     files:
