--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 # application.yml
 #**/application.yml
 **/application-local.yml
-**/application-prod.yml
+#**/application-prod.yml
 
 # 빌드, 로컬 설정 파일
 .idea/
