--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -6,33 +6,27 @@ server:
   port: 8080
 spring:
   datasource:
-    url: jdbc:h2:mem:test;MODE=MySQL
-    driver-class-name: org.h2.Driver
-    username: sa
-    password:
-  h2:
-    console:
-      enabled: true
-  jpa:
+    url: ${DATABASE_URL}?allowPublicKeyRetrieval=true&useSSL=false
+    driver-class-name: org.mariadb.jdbc.Driver
+    username: root
+    password: root
     hibernate:
-      ddl-auto: create
+      ddl-auto: none
     show-sql: true
     properties:
       hibernate:
         format_sql: true
       default_batch_fetch_size: 100
     open-in-view: false
-  output:
-    ansi:
-      enabled: always
 
 logging:
   level:
     '[bdbe.bdbd]': INFO
     '[org.hibernate.type]': TRACE
 
-file:
-  path: ./images/
+proxy:
+  host: krmp-proxy.9rum.cc
+  port: 3128
 
 cloud:
   aws:
@@ -45,3 +39,6 @@ cloud:
       bucket: ${AWS_BUCKET_NAME}
     stack:
       auto: false
+# 파일 저장 경로
+#file:
+#  path: ./images/
